# psopt

./: .ci-trigger  .gitignore  .travis.yml  CMakeLists-adolc.txt.in  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL  LICENSE.txt  Makefile  Makefile.cxsparse.vc  Makefile.ipopt  Makefile.lusol  Makefile.lusol.vc  Makefile.snopt  Makefile.vc  MicrosoftVisualStudio.inc  README  README.md  README_Ubuntu_22.04.md  RELEASE NUMBER  RELEASE_NUMBER  index.html  install-ubuntu-16.04.sh  install-ubuntu-18.04.sh  install-ubuntu-snopt.h  install-ubuntu.sh  psopt-config.cmake  update_myblas_h.vbs  use_ipopt_and_snopt.bat  use_ipopt_and_snopt.sh  use_ipopt_only.sh
PSOPT/: CMakeLists-adolc.txt.in  CMakeLists.txt
PSOPT/doc/: PSOPT_Manual_R4.bbl  PSOPT_Manual_R4.bib  PSOPT_Manual_R4.tex
PSOPT/examples/: Makefile-IPOPT.inc  Makefile-SNOPT.inc  Makefile.ipopt  Makefile.snopt  Makefile_linux.inc  Makefile_linux.inc.bak  Makefile_linux.inc_IPOPT  Makefile_linux.inc_SNOPT  Makefile_linux_IPOPT
PSOPT/lib/: Makefile  Makefile-IPOPT.vc  Makefile-SNOPT.vc  Makefile.ipopt  Makefile.snopt  Makefile.vc
PSOPT/src/: IPOPT_interface.cxx  IPOPT_interface.cxx~  NLP_bounds.cxx  NLP_bounds.cxx~  NLP_constraints.cxx  NLP_constraints.cxx~  NLP_guess.cxx  NLP_guess.cxx~  NLP_interface.cxx  NLP_interface.cxx~  NLP_objective.cxx  NLP_objective.cxx~  SNOPT_interface.cxx  derivatives.cxx  derivatives.cxx~  evaluate.cxx  evaluate.cxx~  get_numbers.cxx  get_numbers.cxx~  get_variables.cxx  get_variables.cxx~  integrate.cxx  integrate.cxx~  interpolation.cxx  interpolation.cxx~  ipopt_psoc.h  ipopt_psoc.h~  ipopt_psopt.h  ipopt_psopt.h~  mesh.cxx  mesh.cxx~  parameter_estimation.cxx  parameter_estimation.cxx~  phases.cxx  phases.cxx~  plot.cxx  plot.cxx~  print.cxx  print.cxx~  propagate.cxx  (+23 more)
dmatrix/: CMakeLists-lusol.txt.in  CMakeLists-suitesparse.txt.in  CMakeLists.txt  README
dmatrix/examples/: CMakeLists.txt  Makefile  Makefile.vc  colon  colon.cxx  expm  expm.cxx  rand  rand.cxx  ricc  ricc.cxx  sparse  sparse.cxx  template.cxx
dmatrix/include/: Doxyfile  SparseMatrix.h  dmatrixv.h  helper.h
dmatrix/lib/: Makefile  Makefile.vc
dmatrix/src/: SparseMatrix.cxx  dmatrixv.cxx
examples/: CMakeLists.txt  Makefile.inc  Makefile_linux.inc  genCMake.sh
examples/aerocaptureDOC/: CMakeLists.txt  aerocaptureDOC.cxx  aerocaptureDOC_copy_2.cxx  aerocaptureDOC_copy_3.cxx
examples/aerocaptureDOC_Large/: CMakeLists.txt  aerocaptureDOC_Large.cxx  aerocaptureDOC_Large_3.cxx
examples/aerocaptureNoDOC/: CMakeLists.txt  aerocaptureNoDOC.cxx
examples/alpine/: CMakeList.txt  CMakeLists.txt  alpine.cxx  constraint_summary.txt
examples/bioreactor/: CMakeList.txt  CMakeLists.txt  bioreactor.cxx  bioreactor.txt  mesh_statistics.txt  psopt_solution_bioreactor.txt
examples/brac1/: CMakeList.txt  CMakeLists.txt  Makefile.vc  brac1.cxx  brac1.txt  constraint_summary.txt  mesh_statistics.txt  psopt_solution_saved.txt  psopt_solution_summary.txt
examples/breakwell/: CMakeList.txt  CMakeLists.txt  Makefile  breakwell.cxx  brymr.txt  error_message.txt  mesh_statistics.txt  psopt_solution_breakwell.txt
examples/bryden/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  bryson_denham.cxx  constraint_summary.txt  mesh_statistics.txt
examples/brymr/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  brymr.txt  bryson_max_range.cxx
examples/bryson_denham/: CMakeLists.txt  bryson_denham.cxx  psopt_solution_bryden.txt
examples/bryson_max_range/: CMakeLists.txt  bryson_max_range.cxx  constraint_summary.txt
examples/catmix/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  catmix.cxx  catmix.txt
examples/chain/: CMakeList.txt  CMakeLists.txt  chain.cxx  chain.txt  psopt_solution_chain.txt
examples/climb/: CMakeList.txt  CMakeLists.txt  Makefile.vc  climb.cxx
examples/coulomb/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  coulomb.cxx
examples/cracking/: CMakeList.txt  CMakeLists.txt  Makefile  cracking.cxx  cracking.txt  mesh_statistics.txt  psopt_solution_cracking.txt
examples/crane/: CMakeList.txt  CMakeLists.txt  Makefile.vc  constraint_summary.txt  crane.cxx  crane.txt
examples/dae_i3/: CMakeList.txt  CMakeLists.txt  dae_i3.cxx  dae_i3.txt  error_message.txt  psopt_solution_dae_i3.txt
examples/delay1/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  constraint_summary.txt  delay1.cxx  delay1.txt  psopt_solution_delay1.txt
examples/dqc/: CMakeLists.txt  dqc.cxx
examples/dqr/: CMakeLists.txt  dqr.cxx
examples/f8/: CMakeLists.txt  f8.cxx
examples/fuller/: CMakeLists.txt  fuller.cxx
examples/geodesic/: CMakeLists.txt  geodesic.cxx
examples/glider/: CMakeList.txt  CMakeLists.txt  Makefile  constraint_summary.txt  glider.cxx
examples/goddard/: CMakeList.txt  CMakeLists.txt  Makefile  constraint_summary.txt  error_message.txt  goddard.cxx  goddard.txt  mesh_statistics.txt
examples/heat/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  heat.cxx  mesh_statistics.txt  psopt_solution_heat.txt
examples/hyper/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  hyper.txt  hypersensitive.cxx
examples/hypersensitive/: CMakeLists.txt  hypersensitive.cxx
examples/int_static_linear/: CMakeLists.txt  int_static_linear.cxx
examples/interior_point/: CMakeLists.txt  interior_point.cxx  ipc.txt  psopt_solution_ipc.txt
examples/ipc/: CMakeList.txt  CMakeLists.txt  Makefile
examples/isop/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  isoperimetric.cxx
examples/isoperimetric/: CMakeLists.txt  constraint_summary.txt  isoperimetric.cxx  mesh_statistics.txt  psopt_solution_isoperimetric.txt
examples/lambert/: CMakeList.txt  CMakeLists.txt  Makefile  Makefile.vc  constraint_summary.txt  (+2 more)
python/: CMakeLists.txt  README.md  pyproject.toml
snopt-interface/: .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  configure.ac
tests/: CMakeLists.txt  CMakeLists.txt.in  test_integer_control_expansion.cpp  test_integer_controls.cpp  test_integer_parameters.cpp  test_reconstruct_integer_control.cpp  test_something.cpp  test_sum_up_rounding.cpp
(+498 files in other folders)
