cmake_minimum_required (VERSION 3.10)
project(PSOPT_EXAMPLES LANGUAGES CXX)

add_subdirectory(alpine/)
add_subdirectory(bioreactor/)
add_subdirectory(brac1/)
add_subdirectory(breakwell/)
add_subdirectory(bryden/)
add_subdirectory(brymr/)
add_subdirectory(catmix/)
add_subdirectory(chain/)
add_subdirectory(climb/)
add_subdirectory(coulomb/)
add_subdirectory(cracking/)
add_subdirectory(crane/)
add_subdirectory(dae_i3/)
add_subdirectory(delay1/)
add_subdirectory(glider/)
add_subdirectory(goddard/)
add_subdirectory(heat/)
add_subdirectory(hyper/)
add_subdirectory(ipc/)
add_subdirectory(isop/)
add_subdirectory(lambert/)
add_subdirectory(launch/)
add_subdirectory(lowthr/)
add_subdirectory(lts/)
add_subdirectory(manutec/)
add_subdirectory(missile/)
add_subdirectory(moon/)
add_subdirectory(mpec/)
add_subdirectory(notorious/)
add_subdirectory(obstacle/)
add_subdirectory(param2/)
add_subdirectory(predator/)
add_subdirectory(rayleigh/)
add_subdirectory(reorientation/)
add_subdirectory(shutt/)
add_subdirectory(sing5/)
add_subdirectory(stc1/)
add_subdirectory(steps/)
add_subdirectory(twoburn/)
add_subdirectory(twolink/)
add_subdirectory(twophro/)
add_subdirectory(twophsc/)
add_subdirectory(user/)
add_subdirectory(zpm/)