cmake_minimum_required (VERSION 3.10)
project(PSOPT_EXAMPLES LANGUAGES CXX)

add_subdirectory(alpine/)
add_subdirectory(bioreactor/)
add_subdirectory(brac1/)
add_subdirectory(breakwell/)
add_subdirectory(bryson_denham/)
add_subdirectory(bryson_max_range/)
add_subdirectory(catmix/)
add_subdirectory(chain/)
add_subdirectory(climb/)
add_subdirectory(coulomb/)
add_subdirectory(cracking/)
add_subdirectory(crane/)
add_subdirectory(dae_i3/)
add_subdirectory(delay1/)
add_subdirectory(dqc/)
add_subdirectory(glider/)
add_subdirectory(geodesic/)
add_subdirectory(goddard/)
add_subdirectory(heat/)
add_subdirectory(hypersensitive/)
add_subdirectory(interior_point/)
add_subdirectory(isoperimetric/)
add_subdirectory(lambert/)
add_subdirectory(launch/)
add_subdirectory(low_thrust/)
add_subdirectory(lts/)
add_subdirectory(manutec/)
add_subdirectory(missile/)
add_subdirectory(moon/)
add_subdirectory(mpec/)
add_subdirectory(notorious/)
add_subdirectory(obstacle/)
add_subdirectory(param2/)
add_subdirectory(predator/)
add_subdirectory(rayleigh/)
add_subdirectory(reorientation/)
add_subdirectory(shuttle_reentry/)
add_subdirectory(singular5/)
add_subdirectory(stc1/)
add_subdirectory(steps/)
add_subdirectory(twoburn/)
add_subdirectory(twolinkarm/)
add_subdirectory(twophase_robot/)
add_subdirectory(twophase_schwartz/)
add_subdirectory(user/)
add_subdirectory(wheat/)
add_subdirectory(zpm/)
